--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,4 +22,6 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args: ["build", "-t", "us-central1-docker.pkg.dev/$PROJECT_ID/$_REPO_NAME/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
 images: ["us-central1-docker.pkg.dev/$PROJECT_ID/$_REPO_NAME/hellospring"]
+options:
+  logging: CLOUD_LOGGING_ONLY
 # [END cloudbuild_maven]
